--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 Flask==2.3.3
 Flask-SQLAlchemy==3.0.5
-Werkzeug==2.3.7
+Flask-SocketIO==5.3.5
+python-socketio==5.9.0
+python-engineio==4.7.1
+werkzeug==2.3.7
